fixed spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,5 +42,5 @@ body { padding-top: 65px; }
 }
 
 #search {
-  padding-top: 5px;
+  padding-top: 2px;
 }
